test/fail/integration/_fail_grammar_let_block_func_1.hs
x :: Int
x = let y in 3
main = print "hello"